# avalanche

./: README.md  pyproject.toml
scripts/: collect.py  job.slurm.sh  job_list.json  make_grid.py
src/pseudoavalanche/: __init__.py  analysis.py  bath.py  config.py  evolve.py  hamiltonian.py  observables.py  run.py  state.py
tests/: test_bath.py  test_config.py  test_evolve_observables.py  test_hamiltonian.py
