[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pseudoavalanche"
version = "0.1.0"
description = "A numerical study package for thermalization avalanches with engineered baths."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [ { name = "pseudoavalanche developers" } ]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.11"
]

[project.optional-dependencies]
qiskit = ["qiskit>=0.40"]
